test/driver/diag_show_column.1.stderr
<source>:5: error: cannot add 'i32' to 'bool'
    5 |     5 + true;
      |     ~ ^ ~~~~
